# Tax_Co-Pilot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.txt  ROADMAP.md  SECURITY.md  base.html  calculate.html  calculator.py  csv_import.py  dashboard.html  database.py  domain.py  federal_2024_manifest.yaml  federal_2024_rules.yaml  import.html  m15.db  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  rule_loader.py  rules.yaml  run.bat  run.sh  runs.html  state_GA_2024_manifest.yaml  state_GA_2024_rules.yaml  test_calculate_name_validation.py  test_calculator_resolve_ref.py  test_encoding_guard.py  (+5 more)
.agent_tools/: 00_master_directives.md  01_style_guide.md  02_architecture.md  03_testing_rules.md  04_doc_updater.md  05_session_log.md
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  custom.md  feature_request.md  new_state.md  tax_calculation_error.yml
.github/workflows/: ci.yml
Tax_Co-Pilot/: main.py  requirements.txt
app/: __init__.py  config.py  log.py
app/engine/: __init__.py  calculator.py  rule_loader.py  (+1 more)
docs/: DISCLAIMER.md  ENCRYPTION.md  EXPORT_CONTROL.md  NOTICE.md  RULE_PACK_AUTHORING.md  STATE_AUTHORING_GUIDE.md
scripts/: validate_rule_pack.py
tests/: __init__.py  conftest.py  test_additional_medicare.py  test_additional_standard_deduction.py  test_ai_prompt.py  test_authoring_e2e.py  test_calculate_name_validation.py  test_calculator_resolve_ref.py  test_capital_loss_carryover.py  test_chain_integrity.py  test_constants_editor.py  test_data_mgmt.py  test_deep_review_fixes.py  test_dependent_care.py  test_edge_cases.py  test_education_credits.py  test_eitc.py  test_encoding_guard.py  test_encrypted_database.py  test_encryption.py  test_engine_hardening.py  test_error_paths.py  test_federal_corrections.py  test_forms.py  test_golden.py  test_golden2.py  test_golden_m1.py  test_hash_versioning.py  test_itemized_credits.py  test_logging.py  test_ltcg_rates.py  test_matrix_lookup.py  test_medicare_wages.py  test_milestone12_structure.py  test_milestone14_csp.py  test_milestone15_pagination.py  test_milestone6_routes.py  test_military.py  test_multi_year.py  test_multistate.py  (+17 more)
(+113 files in other folders)
