[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tax-co-pilot"
version = "0.1.0"
description = "Local-first, privacy-preserving tax modeling and calculation system."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Tax Co-Pilot Contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
]
dependencies = [
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",
  "Jinja2>=3.1.0",
  "python-multipart>=0.0.6",
  "pysqlcipher3>=1.2.0",
  "cryptography>=46.0.5",
  "keyring>=24.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "httpx>=0.24.0",
]
dev = [
  "ruff>=0.8.6",
  "mypy>=1.13.0",
  "pip-audit>=2.7.3",
  "types-PyYAML>=6.0.12.20241230",
]

[project.urls]
Repository = "https://github.com/tax-co-pilot/Tax_Co-Pilot"
Issues = "https://github.com/tax-co-pilot/Tax_Co-Pilot/issues"
Documentation = "https://github.com/tax-co-pilot/Tax_Co-Pilot#readme"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "E501", # handled by formatter preference; adjust if you add ruff format
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Form",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Body",
    "fastapi.Path",
    "fastapi.Security",
    "fastapi.File",
    "fastapi.UploadFile",
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true

# Pydantic v2 typically requires plugins for full strictness; start here.
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
